# dist-sys-challenge

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
src/: lib.rs
